<resources>
    <string name="app_name">Keep Moving</string>
    <string name="bt_guide_start_text">开跑</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="validate_success">验证成功</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- String for tab title -->
    <string name="tab_title_recommend">入住</string>
    <string name="tab_title_receive">查询</string>
    <string name="tab_title_reflect">退房</string>


    <string name="hello">Hello World, HotelSystemn!</string>
    <string name="title">登陆</string>
    <string name="username">用户名:</string>
    <string name="pwd">密　码:</string>
    <string name="type">类　型:</string>
    <string name="login">login</string>
    <string name="cancel">cancel</string>
    <string name="register">register</string>
    <string name="name">姓　名:</string>
    <string name="sex">性　　别:</string>
    <string name="man">男:</string>
    <string name="woman">女:</string>
    <string name="idCard">身份证号:</string>
    <string name="timeIn">入住时间:</string>
    <string name="timeSum">入住天数:</string>
    <string name="roomNum">房间号:</string>
    <string name="money">应付金额:</string>
</resources>
