<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/white">

        <TextView
            android:id="@+id/name"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/nameEditText"
            android:paddingLeft="5dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_yellow_corner_style"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/sex"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/sex"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <RadioButton
                android:id="@+id/man"
                android:layout_marginLeft="28dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/woman"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/idCardTextView"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:text="@string/idCard"/>
        <EditText
            android:id="@+id/idCardEditText"
            android:paddingLeft="5dp"
            android:inputType="number"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_yellow_corner_style"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/timeInTextView"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:text="@string/timeIn"/>

        <EditText
            android:id="@+id/timeInEditText"
            android:paddingLeft="5dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_yellow_corner_style"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/timeSumTextView"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:text="@string/timeSum"/>
        <EditText
            android:id="@+id/timeSumEditText"
            android:paddingLeft="5dp"
            android:inputType="number"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_yellow_corner_style"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/roomNumTextView"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:text="@string/roomNum"/>
        <EditText
            android:id="@+id/roomNumEditText"
            android:paddingLeft="5dp"
            android:inputType="number"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_yellow_corner_style"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/moneyTextView"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:text="@string/money"/>
        <EditText
            android:id="@+id/moneyEditText"
            android:paddingLeft="5dp"
            android:inputType="number"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_yellow_corner_style"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <Button
            android:id="@+id/btn01"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_yellow_corner_style"
            android:layout_height="40dp"
            android:text="提交"/>
        <Button
            android:id="@+id/btn02"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_yellow_corner_style"
            android:text="刷新"/>

    </LinearLayout>

    </LinearLayout>
    </ScrollView>


</LinearLayout>